// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputToggle should correctly pass the inputStyle and inputClassName to the invisible input element 1`] = `
<div>
  <div
    class="rmd-toggle-container custom-container"
    style="color: orange;"
  >
    <span
      class="rmd-toggle"
    >
      <input
        class="rmd-toggle__input custom-input"
        id="toggle"
        style="color: red;"
        type="checkbox"
      />
      <span
        class="rmd-toggle__icon rmd-toggle__icon--overlay"
      />
      <span
        class="rmd-ripple-container"
      />
    </span>
  </div>
</div>
`;

exports[`InputToggle should correctly pass the inputStyle and inputClassName to the invisible input element 2`] = `
<div>
  <div
    class="rmd-toggle-container custom-container"
    style="color: orange;"
  >
    <span
      class="rmd-toggle"
    >
      <input
        class="rmd-toggle__input custom-input"
        id="toggle"
        style="color: red;"
        type="radio"
        value="a"
      />
      <span
        class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
      />
      <span
        class="rmd-ripple-container"
      />
    </span>
  </div>
</div>
`;

exports[`InputToggle should render correctly 1`] = `
<div>
  <div
    class="rmd-toggle-container"
  >
    <span
      class="rmd-toggle"
    >
      <input
        class="rmd-toggle__input"
        id="toggle"
        type="radio"
      />
      <span
        class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
      />
      <span
        class="rmd-ripple-container"
      />
    </span>
  </div>
</div>
`;

exports[`InputToggle should render correctly 2`] = `
<div>
  <div
    class="rmd-toggle-container"
  >
    <span
      class="rmd-toggle"
    >
      <input
        class="rmd-toggle__input"
        id="toggle"
        type="checkbox"
      />
      <span
        class="rmd-toggle__icon rmd-toggle__icon--overlay"
      />
      <span
        class="rmd-ripple-container"
      />
    </span>
  </div>
</div>
`;
